--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "3.9"
   },
   "dependencies": {
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.34",
+    "readline": "^1.3.0"
   }
 }
